[package]
name = "rustguard_combined"
version = "0.1.0"
edition = "2021"

[dependencies]
pcap = "1.1.0"
pnet = "0.34.0"
colored = "2.0"
ndarray = "0.15.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.22.1", features = ["auto-initialize"] }
linfa = "0.6.1"
linfa-clustering = "0.6.1"
ndarray-stats = "0.5.1"
ctrlc = "3.4.4"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5.0", features = ["cors", "fs"] }
ipnetwork = "0.20"
chrono = { version = "0.4", features = ["serde"] }
dns-lookup = "2.0.4"
futures = "0.3"
netscan = "0.9.0"
quick-xml = "0.36"